--- a/hexo-site/_config.yml
+++ b/hexo-site/_config.yml
@@ -8,7 +8,7 @@ subtitle: '2021材料整理和申诉日志'
 description: '材料过多过杂，不方便检索，整理到这个档库库中，并对抗诉和检举相关事件做个记录'
 keywords:
 author: tfd1949
-language: zh
+language: zh-CN
 timezone: 'Asia/Shanghai'
 
 # URL
