change author nick name and add avatar

--- a/hexo-site/_config.yml
+++ b/hexo-site/_config.yml
@@ -7,7 +7,7 @@ title: 桃源司法所造假检举抗诉材料日志
 subtitle: '2021材料整理和申诉日志'
 description: '材料过多过杂，不方便检索，整理到这个档库库中，并对抗诉和检举相关事件做个记录'
 keywords:
-author: tfd1949
+author: 沉雁待雪
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
