fix waline hints

--- a/hexo-site/source/_data/yun.yml
+++ b/hexo-site/source/_data/yun.yml
@@ -65,5 +65,5 @@ waline:
   visitor: true
   comment: true
   avatarCDN: https://cdn.v2ex.com/gravatar/
-  placeholder: tfd1949@hotmail.com
+  placeholder: 填写邮箱，可以收到回复通知哦～
   requiredFields: ["nick"]
