--- a/hexo-site/source/_data/yun.yml
+++ b/hexo-site/source/_data/yun.yml
@@ -7,6 +7,9 @@ banner:
   enable: true
   title: 倔强老头的糟心事
 
+wordcloud:
+  enable: true
+
 # Post meta display settings
 post_meta:
   item_text: false
@@ -56,8 +59,8 @@ comment:
   candidates:
     - waline
     # - giscus
-  tips:
-    - 如果您有任何关于博客内容的相关讨论，欢迎前往 <a href="https://github.com/YunYouJun/yunyoujun.github.io/discussions" target="_blank">GitHub Discussions</a> 与我交流。
+#  tips:
+#    - 如果您有任何关于博客内容的相关讨论，欢迎前往 <a href="https://github.com/tfd1949/2021_impeach_diary/discussions" target="_blank">GitHub Discussions</a> 与我交流。
 
 waline:
   enable: true
