--- a/hexo-site/package.json
+++ b/hexo-site/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "^5.0.0",
+    "hexo-blog-encrypt": "^3.1.6",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -24,6 +25,7 @@
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
     "hexo-theme-landscape": "^0.0.3",
+    "hexo-widget-tree": "^0.1.1",
     "hexo-wordcount": "^6.0.1"
   }
 }
